add support for redirecting stderr